Refactor the functions

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,9 @@
     <script src="lib/mocha/mocha.js"></script>
     <script src="lib/chai/chai.js"></script>
     <script src="lib/sinon/sinon.js"></script>
+    <script src="https://raw.githubusercontent.com/lodash/lodash/4.17.10-npm/lodash.js"></script>
+    <script src="./platform.js"></script>
+    <script src="https://raw.githubusercontent.com/bestiejs/benchmark.js/2.1.2/benchmark.js"></script>
     <script>
       mocha.setup('bdd');
       window.expect = chai.expect;
